--- a/ikCulator/ikCulator/Base.lproj/LaunchScreen.storyboard
+++ b/ikCulator/ikCulator/Base.lproj/LaunchScreen.storyboard
@@ -1,8 +1,10 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="23504" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23506"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -11,10 +13,48 @@
             <objects>
                 <viewController id="01J-lp-oVM" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ik" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9xg-dF-NiE">
+                                <rect key="frame" x="178.66666666666666" y="336" width="36" height="60"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="50"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Culator" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="W4T-od-fhB">
+                                <rect key="frame" x="119" y="396" width="155" height="60"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="50"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="doo" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4mf-t1-hUK">
+                                <rect key="frame" x="219.66666666666666" y="364" width="34" height="24"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="numbers.hi" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="nfQ-SB-aT0">
+                                <rect key="frame" x="76" y="146" width="240" height="128"/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="numbers" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="wSZ-9C-I4s">
+                                <rect key="frame" x="76" y="520.66666666666663" width="240" height="180"/>
+                            </imageView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="nfQ-SB-aT0" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="BHP-6B-p1f"/>
+                            <constraint firstItem="4mf-t1-hUK" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" constant="-50" id="Dyc-aX-HnP"/>
+                            <constraint firstItem="wSZ-9C-I4s" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" constant="140" id="Itd-Ne-HJd"/>
+                            <constraint firstItem="4mf-t1-hUK" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" constant="40" id="eBN-iQ-ooh"/>
+                            <constraint firstItem="wSZ-9C-I4s" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" constant="140" id="iov-RG-Urn"/>
+                            <constraint firstItem="9xg-dF-NiE" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="jU5-yg-nCc"/>
+                            <constraint firstItem="W4T-od-fhB" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="nbx-WC-vGK"/>
+                            <constraint firstItem="nfQ-SB-aT0" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" constant="-150" id="o3a-nG-qcx"/>
+                            <constraint firstItem="9xg-dF-NiE" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" constant="-60" id="rPp-Pr-0WF"/>
+                            <constraint firstItem="W4T-od-fhB" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="y3A-WV-4SG"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -22,4 +62,11 @@
             <point key="canvasLocation" x="53" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="numbers" catalog="system" width="128" height="61"/>
+        <image name="numbers.hi" catalog="system" width="128" height="71"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
